# cards

./: README.md  pyproject.toml
cards/cards/: card.py  card_shortcuts.py
cards/cribbage/: cli.py  cribbage.py  discard_table.py  discards.py  hand.py  pegging.py  players.py  scoring.py
cards/test/: test_card.py  test_cribbage_pegging.py  test_cribbage_scoring.py  test_yukon.py
cards/yukon/: oneline_yukon.py  yukon.py  yukon2.py
yukon/: fun.py  requirements.txt  test_yukon.py  yukon.py
